Respond to user if they said they didn't complete their goal

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
       %br
       %br
 
-      %h2.text-center Hiya there #{@user.name}!
+      %h2.text-center Hiya there #{@user.first_name}!
 
       %br
       %br
