Add week separaters

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,6 +94,9 @@ body#tasks-index {
       &.complete {
         color: green;
       }
+      &.new-week {
+        color: black;
+      }
     }
   }
 }
